the timing of the "bus" link creation, the former integrated logic should
be emulated by a rule placed before all other rules:
  ACTION=="add", DEVPATH=="/devices/*", ENV{PHYSDEVBUS}=="?*", WAIT_FOR_SYSFS="bus"

The option "udev_db" does no longer exist. All udev state will always
be in /$udev_root/.udev/ now, there is no longer an option to set this
to anything else.

udev 075
========
Silent a too verbose error logging for the old hotplug.d/ dev.d/
emulation.

The copy of klibc is removed. A systemwide installed version of klibc
should be used to build a klibc udev now.

udev 074
========
NAME="" will not create any nodes, but execute RUN keys. To completely
ignore an event the OPTION "ignore_device" should be used.

After removal of the reorder queue, events with a TIMEOUT can be executed
without any queuing now.

udev 073
========
Fixed bug in udevd, if inotify is not available. We depend on netlink
uevents now, kernels without that event source will not work with that
version of udev anymore.

udev 072
========
The rule parsing happens now in the daemon once at startup, all udev
event processes inherit the already parsed rules from the daemon.
It is shipped with SUSE10.0 and reduces heavily the system load at
startup. The option to save precompiled rules and let the udev process
pick the them up is removed, as it's no longer needed.

Kernel 2.6.15 will have symlinks at /class/input pointing to the real
device. Libsysfs is changed to "translate" the requested link into the
real device path, as it would happen with the hotplug event. Otherwise
device removal and the udev database will not work.

Using 'make STRIPCMD=' will leave the binaries unstripped for debugging
and packaging.

A few improvements for vol_id, the filesytem probing code.

udev 071
========
Fix a stupid typo in extras/run_directory for "make install".

scsi_id creates the temporary devnode now in /dev for usage with a
non-writable /tmp directory.
