@@ -1,13 +1,13 @@
 # udev.conf
 
-# Where in the filesystem to place the device nodes
+# Where in the filesystem to place the device nodes.
 udev_root="@udevdir@"
 
 # The name and location of the udev rules file(s).
 udev_rules="@configdir@/rules.d"
 
 # The initial syslog(3) priority: "err", "info", "debug" or its
-# numerical equivalent. For runtime debugging, change the daemons
-# internal state with: "udevcontrol log_priority=<value>".
+# numerical equivalent. For runtime debugging, the daemons internal
+# state can be changed with: "udevcontrol log_priority=<value>".
 udev_log="err"
 
