@@ -11,6 +11,13 @@ The option "udev_db" does no longer exist. All udev state will always
 be in /$udev_root/.udev/ now, there is no longer an option to set this
 to anything else.
 
+Default location for rule sripts and helper programs is now: /lib/udev/.
+Everything that is not useful on the commandline should go into this
+directory. Also /lib/udev/devices/ is recommended as a directory where
+packages or the user can place real device nodes, which get copied over
+to /dev at every boot. This should replace the various solutions with
+custom config files.
+
 udev 075
 ========
 Silent a too verbose error logging for the old hotplug.d/ dev.d/
